nav.css file, nav directory added

--- a/HTML5-INTRO/semantic.html
+++ b/HTML5-INTRO/semantic.html
@@ -4,46 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic Tags</title>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
-  <header>
-    <nav>
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Blogs</li>
-        </ul>
-    </nav>
-   <h2>Welcome to my personal website</h2>
-   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint minima delectus, ad veniam facere cupiditate accusantium obcaecati totam sequi, id explicabo quisquam earum veritatis assumenda, repellat praesentium saepe numquam quia? Harum officia iste et aspernatur tenetur corporis ipsam. Nobis, dolore illum magnam quo tempore enim aliquam aspernatur amet numquam doloremque minima rem corrupti autem eius iusto laudantium tempora in nam!</p> 
-  </header>
+    <header>
+        <h2>My Salary Sheet</h2>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="semantic.html">Semantic</a></li>
+                <li><a href="audio-video.html">Media</a></li>
+            </ul>
+
+            
+        </nav>
+
+        <h2>Welcome to my Personal Blogs:</h2>
+        <h4><i>Note: Semantic tags are introduced inside this html file</i></h4>
+    </header>
 
   <main>
-    <section class="blogs">
-        <article>
-            <h3>Blog one:</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, rem quod architecto temporibus nulla, quas iusto atque a fugit ipsum ipsa nihil deserunt non. Optio, nesciunt! Deleniti rem ullam sint officia quidem non ab repudiandae nemo. Natus et perspiciatis amet eum neque! Repellendus, ducimus recusandae eius consectetur nemo earum expedita sequi non modi blanditiis vitae porro atque tempora quidem laudantium.</p>
+     <section class="blogs">
+         <article>
+             <h3>Blog one:</h3>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, rem quod architecto temporibus nulla, quas iusto atque a fugit ipsum ipsa nihil deserunt non. Optio, nesciunt! Deleniti rem ullam sint officia quidem non ab repudiandae nemo. Natus et perspiciatis amet eum neque! Repellendus, ducimus recusandae eius consectetur nemo earum expedita sequi non modi blanditiis vitae porro atque tempora quidem laudantium.</p>
 
-            <p>Amazon has earned a reputation as a disruptor of well-established industries through technological innovation and "aggressive" reinvestment of profits into capital expenditures. As of 2023, it is the world's largest online retailer and marketplace, smart speaker provider, cloud computing service through AWS, live-streaming service through Twitch, and Internet company as measured by revenue and market share. In 2021, it surpassed Walmart as the world's largest retailer outside of China, driven in large part by its paid subscription plan, Amazon Prime, which has close to 200 million subscribers worldwide. It is the second-largest private employer in the United States.</p>
-        </article>
+             <p>Amazon has earned a reputation as a disruptor of well-established industries through technological innovation and "aggressive" reinvestment of profits into capital expenditures. As of 2023, it is the world's largest online retailer and marketplace, smart speaker provider, cloud computing service through AWS, live-streaming service through Twitch, and Internet company as measured by revenue and market share. In 2021, it surpassed Walmart as the world's largest retailer outside of China, driven in large part by its paid subscription plan, Amazon Prime, which has close to 200 million subscribers worldwide. It is the second-largest private employer in the United States.</p>
+          </article>
 
-        <article>
-            <h3>Blog one:</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, rem quod architecto temporibus nulla, quas iusto atque a fugit ipsum ipsa nihil deserunt non. Optio, nesciunt! Deleniti rem ullam sint officia quidem non ab repudiandae nemo. Natus et perspiciatis amet eum neque! Repellendus, ducimus recusandae eius consectetur nemo earum expedita sequi non modi blanditiis vitae porro atque tempora quidem laudantium.</p>
+          <article>
+             <h3>Blog one:</h3>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, rem quod architecto temporibus nulla, quas iusto atque a fugit ipsum ipsa nihil deserunt non. Optio, nesciunt! Deleniti rem ullam sint officia quidem non ab repudiandae nemo. Natus et perspiciatis amet eum neque! Repellendus, ducimus recusandae eius consectetur nemo earum expedita sequi non modi blanditiis vitae porro atque tempora quidem laudantium.</p>
 
-            <p>Amazon has earned a reputation as a disruptor of well-established industries through technological innovation and "aggressive" reinvestment of profits into capital expenditures. As of 2023, it is the world's largest online retailer and marketplace, smart speaker provider, cloud computing service through AWS, live-streaming service through Twitch, and Internet company as measured by revenue and market share. In 2021, it surpassed Walmart as the world's largest retailer outside of China, driven in large part by its paid subscription plan, Amazon Prime, which has close to 200 million subscribers worldwide. It is the second-largest private employer in the United States.</p>
-        </article>
-    </section>
+             <p>Amazon has earned a reputation as a disruptor of well-established industries through technological innovation and "aggressive" reinvestment of profits into capital expenditures. As of 2023, it is the world's largest online retailer and marketplace, smart speaker provider, cloud computing service through AWS, live-streaming service through Twitch, and Internet company as measured by revenue and market share. In 2021, it surpassed Walmart as the world's largest retailer outside of China, driven in large part by its paid subscription plan, Amazon Prime, which has close to 200 million subscribers worldwide. It is the second-largest private employer in the United States.</p>
+          </article>
+       </section>
 
-    <section class="photo-albums">
-        <div class="album">
-            <h3>Sajek Tour</h3>
-        </div>
-        <div>
-            <h3>CoxsBazar</h3>
-        </div>
+       <section class="photo-albums">
+         <div class="album">
+             <h3>Sajek Tour</h3>
+         </div>
+         <div>
+             <h3>CoxsBazar</h3>
+         </div>
 
-    </section>
+        </section>
   </main>
 
   <footer>
