--- a/HTML5-INTRO/audio-video.html
+++ b/HTML5-INTRO/audio-video.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio-Video</title>
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 <body>
-    <h2>Explore Audios and Videos</h2>
+    <header>
+        <h2>My Salary Sheet</h2>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="semantic.html">Semantic</a></li>
+                <li><a href="audio-video.html">Media</a></li>
+            </ul>
+
+            
+        </nav>
+
+        <h2>Explore Audios and Videos:</h2>
+        
+    </header>
+
+
     <audio src="assets/media/music1.mp3" controls></audio>
     <video src="assets/media/video1.mp4" controls width="500"></video>
     <br>
