--- a/HTML5-INTRO/form.html
+++ b/HTML5-INTRO/form.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cake Form</title>
+    <link rel="stylesheet" href="styles/nav.css">
     <style>
         label{
             display: block;
@@ -12,7 +13,24 @@
     </style>
 </head>
 <body>
-    <h2>Welcome to Bamberg Cake and Coffee Shop</h2>
+    <header>
+        <h2>My Salary Sheet</h2>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="semantic.html">Semantic</a></li>
+                <li><a href="audio-video.html">Media</a></li>
+            </ul>
+
+            
+        </nav>
+
+        <h2>Welcome to Bamberg Cake and Coffee Shop</h2>
+    </header>
+
+    
     <form action="">
         <label for="name">Your Name:
             <input id="name" type="text" placeholder="Your name">
