--- a/HTML5-INTRO/table.html
+++ b/HTML5-INTRO/table.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
+    <link rel="stylesheet" href="styles/nav.css">
     <style>
 
         table{
@@ -18,6 +19,20 @@
     </style>
 </head>
 <body>
+    <header>
+        <h2>My Salary Sheet</h2>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="semantic.html">Semantic</a></li>
+                <li><a href="audio-video.html">Media</a></li>
+            </ul>
+
+            
+        </nav>
+    </header>
     <table>
         <thead>
             <tr>
