some shortcut techniques added

--- a/HTML5-INTRO/other.html
+++ b/HTML5-INTRO/other.html
@@ -12,5 +12,11 @@
     <input type="number" name="" max="5" id=""> 
     <input type="submit" value="Submit">
     <p title="my tooltip">This is my text</p>
+
+    <!-- shortcut: -->
+    <!-- section.blogs>article.blog*5>h3{My Blog-$}+p>lorem20 -->
+    <!-- .album*3>h3+p -->
+    <!-- More at emmet cheatsheet: https://docs.emmet.io/cheat-sheet/ -->
+
 </body>
 </html>
