only resume heading added

--- a/Developer-Portfolio/index2.html
+++ b/Developer-Portfolio/index2.html
@@ -88,12 +88,18 @@
                     <p class="skill-description">Omnis expedita harum quaerat quod odio est corporis atque consequuntur. Id amet culpa non at.</p>
                 </div>
             </div>
- 
         </section>
  
+
         <!-- Resume Section -->
         <section class="resume">
             <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-content">
+                <div>
+                    
+                </div>
+            </div>
+
         </section>
  
     </main>
