--- a/Developer-Portfolio/index2.html
+++ b/Developer-Portfolio/index2.html
@@ -96,7 +96,35 @@
             <h3 class="section-title">A summary of My Resume</h3>
             <div class="resume-content">
                 <div>
-                    
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
                 </div>
             </div>
 
