--- a/Developer-Portfolio/index3.html
+++ b/Developer-Portfolio/index3.html
@@ -154,6 +154,35 @@
                 <button class="btn-primary">Download CV</button>
             </div>
 
+            <!-- contact section -->
+             <section class="contact">
+                <div>
+                    <h3 class="section-title">Let's Connect</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat. Consequatur itaque vel molestias impedit nulla, at culpa et natus.
+                    </p>
+                    <a href="">
+                        <img src="images/icons/facebook.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/twitter.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/insta.png" alt="">
+                    </a>
+                </div>
+
+                <div>
+                    <h3 class="section-title">Let's Message me</h3>
+                    <form action="">
+                        <input type="text" name="" id="" placeholder="Your name">
+                        <input type="text" name="" id="" placeholder="Your email">
+                        <textarea name="" id=""></textarea>
+                        <input class="btn-primary" type="submit" value="">
+                    </form>
+                </div>
+
+             </section>
+
         </section>
  
     </main>
