--- a/Developer-Portfolio/index3.html
+++ b/Developer-Portfolio/index3.html
@@ -158,7 +158,7 @@
              <section class="contact">
                 <div>
                     <h3 class="section-title">Let's Connect</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat. Consequatur itaque vel molestias impedit nulla, at culpa et natus.
+                    <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat. Consequatur itaque vel molestias impedit nulla, at culpa et natus.
                     </p>
                     <a href="">
                         <img src="images/icons/facebook.png" alt="">
@@ -176,8 +176,8 @@
                     <form action="">
                         <input type="text" name="" id="" placeholder="Your name">
                         <input type="text" name="" id="" placeholder="Your email">
-                        <textarea name="" id=""></textarea>
-                        <input class="btn-primary" type="submit" value="">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        <input class="btn-primary" type="submit" value="Submit">
                     </form>
                 </div>
 
