--- a/Developer-Portfolio/index.html
+++ b/Developer-Portfolio/index.html
@@ -4,26 +4,192 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
-    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="stylesheet" href="styles/portfolio3.css"> <!-- link relation to portfolio.css in styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- the above reference link is copied from google open sans regular 400 web link  -->
 </head>
+ 
+ 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
             <ul>
                 <li>Portfolio</li>
                 <li>Blog</li>
-                <li><button>Hire</button></li>
+                <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+ 
+        <!-- header banner -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">This is Mary Hardy. This is the portfolio of his career. More details coming soon.</p>
+                <button class="btn-primary">Download CV</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
+       
     </header>
-    <main>
 
+    <main>
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I am a designer and developer with passion for web design.I enjoy developing simple, clean and slick websites that provide real value to the end users. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements is the main focus to my work.</p>
+ 
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-description">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Speciality:</p>
+                    <p class="info-description">Web Developer</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Location:</p>
+                    <p class="info-description">Dhaka, BD</p>
+                </div>
+ 
+            </div>
+        </section>
+ 
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <p class="whatido-description">I have more than 10 years of experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        <!-- shortcut for the below listed things:
+            .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Javascript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque nostrum cupiditate hic perferendis sunt sed.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Harum adipisci consequuntur quam provident, ab ex eaque, corrupti laboriosam similique magni porro minus dolore.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Itaque optio, soluta, officia aliquam repellendus cum nobis, corrupti quaerat recusandae doloribus blanditiis eius porro!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Omnis expedita harum quaerat quod odio est corporis atque consequuntur. Id amet culpa non at.</p>
+                </div>
+            </div>
+        </section>
+ 
+
+        <!-- Resume Section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Masters in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ Font. Awesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    
+                </div>
+            </div>
+
+            <!-- Download CV button section -->
+            <div class="resume-button">
+                <button class="btn-primary">Download CV</button>
+            </div>
+
+            <!-- contact section -->
+             <section class="contact">
+                <div>
+                    <h3 class="section-title">Let's Connect</h3>
+                    <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, quaerat. Consequatur itaque vel molestias impedit nulla, at culpa et natus.
+                    </p>
+                    <a href="">
+                        <img src="images/icons/facebook.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/twitter.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/insta.png" alt="">
+                    </a>
+                </div>
+
+                <div>
+                    <h3 class="section-title">Let's Message me</h3>
+                    <form action="">
+                        <input type="text" name="" id="" placeholder="Your name">
+                        <input type="text" name="" id="" placeholder="Your email">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        <input class="btn-primary" type="submit" value="Submit">
+                    </form>
+                </div>
+
+             </section>
+
+        </section>
+ 
     </main>
     <footer>
-
+ 
     </footer>
-
+ 
 </body>
 </html>
+
