icon codeline added

--- a/Developer-Portfolio/index.html
+++ b/Developer-Portfolio/index.html
@@ -6,6 +6,8 @@
     <title>Developer Portfolio</title>
     <link rel="stylesheet" href="styles/portfolio3.css"> <!-- link relation to portfolio.css in styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- under full line is copied from the kit code of font awesome -->
+    <script src="https://kit.fontawesome.com/3ba8d9cfb0.js" crossorigin="anonymous"></script>
     <!-- the above reference link is copied from google open sans regular 400 web link  -->
 </head>
  
