download icon added

--- a/Developer-Portfolio/index.html
+++ b/Developer-Portfolio/index.html
@@ -29,7 +29,7 @@
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">This is Mary Hardy. This is the portfolio of his career. More details coming soon.</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -153,7 +153,7 @@
 
             <!-- Download CV button section -->
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
 
             <!-- contact section -->
