--- a/Developer-Portfolio/index.html
+++ b/Developer-Portfolio/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
     <link rel="stylesheet" href="styles/portfolio3.css"> <!-- link relation to portfolio.css in styles -->
+
+     <!-- the under reference link is copied from google open sans regular 400 web link  -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- under full line is copied from the kit code of font awesome -->
     <script src="https://kit.fontawesome.com/3ba8d9cfb0.js" crossorigin="anonymous"></script>
-    <!-- the above reference link is copied from google open sans regular 400 web link  -->
+  
 </head>
  
  
@@ -30,6 +32,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">This is Mary Hardy. This is the portfolio of his career. More details coming soon.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary">Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
