--- a/Developer-Portfolio/index.html
+++ b/Developer-Portfolio/index.html
@@ -32,7 +32,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">This is Mary Hardy. This is the portfolio of his career. More details coming soon.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary-contact-button"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
