--- a/Developer-Portfolio/index.html
+++ b/Developer-Portfolio/index.html
@@ -179,8 +179,8 @@
                 <div>
                     <h3 class="section-title">Let's Message me</h3>
                     <form action="">
-                        <input type="text" name="" id="" placeholder="Your name">
-                        <input type="text" name="" id="" placeholder="Your email">
+                        <input type="text" name="" id="" placeholder="Your Name">
+                        <input type="text" name="" id="" placeholder="Your Email">
                         <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                         <input class="btn-primary" type="submit" value="Submit">
                     </form>
