position.html code added

--- a/PSEUDO POSITION/position.html
+++ b/PSEUDO POSITION/position.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Positions</title>
+    <style>
+        .box{
+            border: 2px dotted plum;
+            width: 200px;
+        }
+
+        /* .ring{
+            position: relative;
+            left: 50px;
+            top: 30px;
+        } */
+        .ring{
+            position: absolute;
+            top: 40px;
+            left: 100px;
+        }
+    </style>
 </head>
 <body>
     <h3>CSS Positions</h3>
+    <ol>
+        <!-- Types of positions: -->
+        <!--Flow related  -->
+        <li>Static</li>
+        <li>Relative <small>(current position e relative kototuku change hobe and it will not leave the current spot)</small></li>
+        <li>Absolute <small>(will loose it;s own position and will move based on the root)</small></li>
+        <!-- scroll related -->
+        <li>Fixed</li>
+        <li>Sticky</li>
+    </ol>
+
+    <div class="swim-container">
+        <div class="box boy">
+            <img src="swim/boy.svg" alt="" srcset=""></div>
+        <div class="box ring">
+            <img src="swim/ring.svg" alt="" srcset=""></div>
+        <div class="box water">
+            <img src="swim/water.svg" alt="" srcset=""></div>
+    </div>
+
+    
+
+
+
 </body>
 </html>
