--- a/PSEUDO POSITION/position.html
+++ b/PSEUDO POSITION/position.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Positions</title>
     <style>
+
+        .swim-container{
+            position: relative;
+            border: 2px solid peru;
+
+        }
         .box{
             border: 2px dotted plum;
             width: 200px;
@@ -15,11 +21,23 @@
             left: 50px;
             top: 30px;
         } */
-        .ring{
+        /* .ring{
             position: absolute;
             top: 40px;
             left: 100px;
+        } */
+
+        .ring{
+            position: sticky;
+            top: 0px;
         }
+
+        .dummy{
+            border: 1px solid turquoise;
+            height: 200px;
+        }
+
+
     </style>
 </head>
 <body>
@@ -29,7 +47,7 @@
         <!--Flow related  -->
         <li>Static</li>
         <li>Relative <small>(current position e relative kototuku change hobe and it will not leave the current spot)</small></li>
-        <li>Absolute <small>(will loose it;s own position and will move based on the root)</small></li>
+        <li>Absolute <small>(will loose it's own position and will move based on the root)</small></li>
         <!-- scroll related -->
         <li>Fixed</li>
         <li>Sticky</li>
@@ -37,11 +55,34 @@
 
     <div class="swim-container">
         <div class="box boy">
-            <img src="swim/boy.svg" alt="" srcset=""></div>
+            <img src="swim/boy.svg" alt="" srcset="">
+        </div>
         <div class="box ring">
-            <img src="swim/ring.svg" alt="" srcset=""></div>
+            <img src="swim/ring.svg" alt="" srcset="">
+        </div>
         <div class="box water">
-            <img src="swim/water.svg" alt="" srcset=""></div>
+            <img src="swim/water.svg" alt="" srcset="">
+        </div>
+
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+    </div>
+
+    <div class = "another">
+
     </div>
 
     
