--- a/PSEUDO POSITION/position.html
+++ b/PSEUDO POSITION/position.html
@@ -27,14 +27,24 @@
             left: 100px;
         } */
 
-        .ring{
+        /* .ring{
             position: sticky;
             top: 0px;
+        } */
+
+        .ring{
+            position: fixed;
+            top: 200px;
+            left: 50px;
         }
 
         .dummy{
             border: 1px solid turquoise;
             height: 200px;
+        }
+
+        .another{
+            border: 2px solid blue;
         }
 
 
@@ -82,11 +92,13 @@
     </div>
 
     <div class = "another">
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
+        <div class="dummy"></div>
 
     </div>
-
-    
-
 
 
 </body>
