--- a/Developer-Portfolio/index.html
+++ b/Developer-Portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
-    <link rel="stylesheet" href="styles/portfolio3.css"> <!-- link relation to portfolio.css in styles -->
+    <link rel="stylesheet" href="styles/portfolioMedia.css"> <!-- link relation to portfolio.css in styles -->
 
      <!-- the under reference link is copied from google open sans regular 400 web link  -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
